fix bug with tubeMap spilling out of div

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -31,7 +31,7 @@ input[type='file'] {
 
 /* the div containing the tubemap svg */
 #tubeMapSVG {
-  /* overflow: auto; */
+  overflow: auto;
   width: calc(100% - 40px);
   position: relative;
   margin: 20px;
